kubernetes/apps/security/falco/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falco
spec:
  hostnames:
    - falco.${D_HS}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: falco-falcosidekick-ui
          port: 2802
      matches:
        - path:
            type: PathPrefix
            value: /
